feat: Allow plugin listeners to register sub-listeners in AbstractMindustryPlugin